[gd_scene load_steps=2 format=3 uid="uid://cmff7m6w73mhd"]

[ext_resource type="Script" uid="uid://nvbxb3as2bly" path="res://Component Nodes/health_object_spawn_node.gd" id="1_iaham"]

[node name="HealthObjectSpawn Node" type="Node"]
script = ExtResource("1_iaham")

[connection signal="spawn_body" from="." to="." method="_on_spawn_body"]
